--- a/Auth/appsettings.json
+++ b/Auth/appsettings.json
@@ -8,6 +8,7 @@
   "AllowedHosts": "*",
   "Database": {
     "Postgres": "postgres://postgres.xiowewpzxkvisipbwooc:1xW7ePqxfvcxIA10@aws-0-us-west-1.pooler.supabase.com:6543/postgres",
-    "MongoDatabase": "mongodb+srv://windowclass:windowclass@cluster0.btzn5cp.mongodb.net/?retryWrites=true&w=majority"
+    "MongoDatabase": "mongodb+srv://windowclass:windowclass@cluster0.btzn5cp.mongodb.net/?retryWrites=true&w=majority",
+    "DatabaseName":  "Shoping"
   }
 }
